--- a/SignUp.html
+++ b/SignUp.html
@@ -34,11 +34,11 @@
           </div>
           <div class="text-sm tracking[0.5] relative">
             <input class="w-full h-12 px-3 outline-[#C1C5D0] border-2 rounded-xl" type="password" name="" placeholder="Password" />
-            <div class="absolute top-3 right-4 text-[#4c3f91]"><i data-feather="eye"></i></div>
+            <div class="container-icon-eye absolute top-3 right-4 text-[#4c3f91]"><i class="eye-icon fa-eye"></i></div>
           </div>
           <div class="text-sm tracking[0.5] relative">
             <input class="w-full h-12 px-3 outline-[#C1C5D0] border-2 rounded-xl" type="password" name="" placeholder="Confirm Password" />
-            <div class="absolute top-3 right-4 text-[#4c3f91]"><i data-feather="eye"></i></div>
+            <div class="container-icon-eye2 absolute top-3 right-4 text-[#4c3f91]"><i class="eye-icon2 fa-eye"></i></div>
           </div>
           <div class="flex items-center gap-3.5">
             <div><input type="checkbox" name="" id="" /></div>
@@ -56,5 +56,6 @@
   <script>
     feather.replace();
   </script>
+  <script type="module" src="./assets/js/script.js"></script>
 </body>
 </html>
