--- a/SignIn.html
+++ b/SignIn.html
@@ -16,7 +16,7 @@
         <section>
             <div class="overlay"></div>
         </section>
-        <section class="w-full lg:basis-2/5 mt-5 px-11 xl:px-24 2xl:px-36">
+        <!-- <section class="w-full lg:basis-2/5 mt-5 px-11 xl:px-24 2xl:px-36">
             <div class="w-full flex flex-col gap-3">
                 <div class="flex justify-start items-center gap-3 mb-0">
                     <div style="width:12vw">
@@ -65,11 +65,75 @@
                     </div>
                 </div>
             </div>
+        </section> -->
+        <section class="w-full lg:basis-2/5 mt-5 px-11 xl:px-24 2xl:px-36">
+            <div class="w-full flex flex-col gap-3">
+                <div class="flex justify-start items-center gap-3 mb-0">
+                    <div style="width:12vw">
+                        <a href="index.html">
+                            <img src="./assets/img/event_black.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+                <div class="text-2xl font-semibold tracking-[1px] text-[#373A42]">Sign In</div>
+                <div class="text-sm font-semibold tracking-[0.5px] text-[#373A42] mb-8">Hi, Welcome back to Urticket!
+                </div>
+                <form class="cust-form-login flex flex-col gap-3.5">
+                    <div class="text-sm tracking[0.5]">
+                        <input class="cust-username-input w-full h-14 px-3 outline-[#C1C5D0] border-2 rounded-xl"
+                            type="text" name="username" placeholder="Username" />
+                    </div>
+                    <div
+                        class="cust-message-for-username hidden items-center justify-start text-sm text-red-500 font-medium tracking[0.5]">
+                    </div>
+                    <div class="text-sm tracking[0.5]">
+                        <input class="cust-email-input w-full h-14 px-3 outline-[#C1C5D0] border-2 rounded-xl"
+                            type="text" name="email" placeholder="Email" />
+                    </div>
+                    <div
+                        class="cust-message-for-email hidden items-center justify-start text-sm text-red-500 font-medium tracking[0.5]">
+                    </div>
+                    <div class="text-sm tracking[0.5] relative">
+                        <input class="cust-pass-input w-full h-14 px-3 outline-[#C1C5D0] border-2 rounded-xl"
+                            type="password" name="password" placeholder="Password" />
+                        <div class="cust-container-icon-eye absolute top-4 right-4 text-[#4c3f91]"><i
+                                class="cust-eye-icon fa fa-eye fa-lg"></i></div>
+                    </div>
+                    <div
+                        class="cust-message-for-password hidden items-center justify-start text-sm text-red-500 font-medium tracking[0.5]">
+                    </div>
+                    <div
+                        class="cust-message-wrong-input hidden items-center justify-center text-sm text-red-500 font-medium tracking[0.5]">
+                    </div>
+                    <div class="self-end text-sm text-[#FB1494] font-semibold tracking[0.5] my-3"><a
+                            href="ForgotPass.html">Forgot Password ?</a></div>
+                    <div>
+                        <button type="submit"
+                            class="shadow-for-all-button w-full h-14 rounded-xl bg-[#FB1494] text-base font-semibold tracking-[1px] text-white">
+                            <a href="Home.html">Sign In</a>
+                        </button>
+                    </div>
+                </form>
+                <div class="flex flex-col items-center justify-center gap-4 mt-12">
+                    <div class="text-sm tracking[0.5] text-[#373A42]">or sign in with</div>
+                    <div class="flex items-center justify-center gap-4">
+                        <div
+                            class="w-24 h-14 flex items-center justify-center rounded-md border-2 border-[#4c3f91] cursor-pointer">
+                            <img src="./assets/img/google.png" alt="" />
+                        </div>
+                        <div
+                            class="w-24 h-14 flex items-center justify-center rounded-md border-2 border-[#4c3f91] cursor-pointer">
+                            <img src="./assets/img/fb..png" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <script>
         feather.replace();
     </script>
+    <script type="module" src="./script.js"></script>
 </body>
 
 </html>
